--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="gradiant"></div>
         <div class="dlend"></div>
        <div class="img">
-        <img src="150.png" alt="img1">
+        <img src="https://x.com/mina_kabbout/status/1694807831793308081/photo/1" alt="img1">
        </div>
 </div>
     
