--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Ur fav designer :)</title>
+</head>
+<body>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1366 5219.24">
   <defs>
     <linearGradient id="linear-gradient" x1="-.72" y1="471.74" x2="1366.96" y2="471.74" gradientUnits="userSpaceOnUse">
@@ -356,3 +364,5 @@
     </g>
   </g>
 </svg>
+</body>
+</html>
