--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cls-1">
         <div class="img-1">
-         <img src="110.png.png">
+         <img src="110.png.png" alt="logo">
         </div>
         <div>
             <a href="mywork.html"><button class="b-1"></button></a>
