--- a/index.html
+++ b/index.html
@@ -4,20 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
+    <script src="https://kit.fontawesome.com/c598bb2a90.js" crossorigin="anonymous"></script>
     <title>ur fav designer :)</title>
 </head>
 <body>
     <div class="cls-1">
         <div class="img-1">
          <img src="110.png.png" alt="logo">
-        </div>
-        <div>
-            <a href="mywork.html"><button class="b-1"></button></a>
+        </div> 
+        <div class="b-m">
+            <div class="cls-2"></div>
+            <a href="mywork.html"><button class="b-1"><p class="t-1">See my work</p></button></a>
+            
+        </div> 
+        <div class="t-a">
+            <p class="t-2">Contacts</p>
         </div>
         <div class="icon">
-            <a href=""><div class="ins"></div></a>
-           <a href=""><div class="twit"></div></a> 
-        </div>
+            
+            <a href="https://www.instagram.com/minakabbout?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><div class="ins i">
+                <div class="i-1">
+                    <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+                </div>
+            </div>
+        </a>
+           <a href="https://x.com/mina_kabbout" target="_blank"><div class="twit i">
+            <div class="i-1">
+                <i class="fa-brands fa-x-twitter" style="color: #ffffff;"></i>
+            </div>
+           </div></a> 
+           <a href="emailme.html">
+                <div class="i">
+                    <div class="i-1">
+                        <i class="fa-solid fa-envelope" style="color: #ffffff;"></i>
+                    </div>
+                </div>
+            </a>
+        </div>       
     </div>
 </body>
 </html>
