--- a/emailme.html
+++ b/emailme.html
@@ -15,7 +15,7 @@
     <input type="hidden" name="access_key" value="b8bf530d-e410-4197-b8e4-fa9e6a232059">
     <input type="text" name="name" placeholder="Your name" required>
     <input type="email" name="email" placeholder="Email" required>
-    <textarea name="message" rows="4" placeholder="your message"></textarea>
+    <textarea name="message" rows="4" placeholder="your message" required></textarea>
 <button type="submit">Send</button>
     <div><h3 id="1" class="th">Thanks :)</h3></div>
 </form>
